<resources>
    <string name="app_name">Hotel</string>
    <string name="enter_a_city_or_property">Enter a city or property</string>
    <string name="travelers_and_rooms">Travelers and Rooms</string>
    <string name="steps">Steps</string>
    <string name="bonus_tripcoin">Bonus TripCoin</string>
    <string name="search_hotels">Search hotels</string>
    <string name="booking_history">Booking History</string>
    <string name="search_city_or_destination">Search city or destination</string>
    <string name="destination_city">Destination City</string>
    <string name="booking_detail">Booking Details</string>
    <string name="travellers_info">Travellers Information</string>
    <string name="hotel_info">Hotel Information</string>
    <string name="room_details">Room Details</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="confirm_cancel_booking">Do you really want to cancel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bed_in_dorms">Bed in Dorms</string>
    <string name="room">\"Room \"</string>
    <string name="contact_information">Contact Information</string>
    <string name="full_name_given_name_surname">Full Name (Given Name + Surname)</string>
    <string name="nationality">Nationality</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="bdt">BDT</string>
    <string name="booking_id">Booking ID:</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="value_4_adt_3_chd">4 Adt 3 Chd</string>
    <string name="status_colon">Status:</string>
    <string name="payment_colon">Payment:</string>
    <string name="booking_colon">Booking:</string>
    <string name="retry_booking">RETRY BOOKING</string>
    <string name="resend_voucher">RESEND VOUCHER</string>
    <string name="details_information">Details Information</string>
    <string name="hotel_information">Hotel Information</string>
    <string name="policies">Policies</string>
    <string name="amenities">Amenities</string>
    <string name="booking_id_colon">Booking ID:</string>
    <string name="price_before_discount">Price before discount</string>
    <string name="discount">Discount</string>
    <string name="paid_amount">Paid amount</string>
    <string name="adult">Adult</string>
    <string name="age">Age</string>
    <string name="wanna_go">wanna go</string>
    <string name="been_there">been there</string>
    <string name="pricing_detail">Pricing Detail</string>
    <string name="starts_from_price_includes_vat_amp_tax"><![CDATA[Starts from (Price includes VAT & Tax)]]></string>
    <string name="night">/night</string>
    <string name="earn_trip_coin_min">Earn TripCoin (min)</string>
    <string name="or">OR</string>
    <string name="redeem_tripcoin_max">Redeem TripCoin (max)</string>
    <string name="share_to_earn_more_trip_coins">Share to earn more Trip Coins</string>
    <string name="share">SHARE</string>
    <string name="all_amenities">All Amenities</string>
    <string name="hotel_description">Hotel Description</string>
    <string name="select_room">SELECT ROOM</string>
    <string name="non_refundable">Non-refundable</string>
    <string name="refundable">Refundable</string>
    <string name="free_cancellation_date">Free Cancellation Date: </string>
    <string name="price_details">Pricing Details</string>
    <string name="total_amount_before_discount">Total Amount Before Discount</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="final_price">Final Price</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="prices_range">Prices Range</string>
    <string name="search_hotel">Search Hotel</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="location_range">Location Range</string>
    <string name="property_rating">Property Rating</string>
    <string name="property_type">Property Type</string>
    <string name="facilities_amp_amenities"><![CDATA[Facilities & Amenities]]></string>
    <string name="point_of_interest">Point Of Interest</string>
    <string name="sorry">Sorry!</string>
    <string name="travelers">Travelers</string>
    <string name="add_room">ADD ROOM</string>
    <string name="starts_from">Starts from</string>
    <string name="price_inclusive_of_vat_amp_tax"><![CDATA[*Price inclusive of VAT & Tax]]></string>
    <string name="enter_hotel_name">Enter hotel name</string>
    <string name="e_g_grand_palace">e.g. Grand Palace</string>
    <string name="distance_from_the_city_centre">Distance from the city centre</string>
    <string name="km_25">25 KM</string>
    <string name="no_risk_no_cancellation_fee">No Risk! No Cancellation Fee</string>
    <string name="show_more">Show More</string>
    <string name="remove">REMOVE</string>
    <string name="adult_12_yrs">Adult (12+ yrs)</string>
    <string name="children_1_10_yrs">Children (1 – 10 yrs)</string>
    <string name="age_of_the_children">Age of the Children</string>
    <string name="drag_to_slider_to_redeem_trip_coin">Drag to slider to redeem trip coin</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="average_per_room_per_night">Average per room per night</string>
    <string name="close">Close</string>
    <string name="select_discount_option">Select Discount Option</string>
    <string name="guests_of_room_1">Guests of Room 1</string>
    <string name="guests_of_room_2">Guests of Room 2</string>
    <string name="guests_of_room_3">Guests of Room 3</string>
    <string name="guests_of_room_4">Guests of Room 4</string>
    <string name="select_from_passenger_quick_pick">Select from Passenger quick pick</string>
    <string name="apply">Apply</string>
    <string name="confirm_message_hotel_verification">I’ve confirm that the documents and the information provided are correct and can be used for the flight booking process.</string>
    <string name="instant_discount_text">*Instant discount available on AMEX, BRAC, EBL, NRB, Standard Chartered, UCBL card payment. Please select the AMEX or Visa/Master card option from below-</string>
    <string name="select_your_preferred_bank">Select Your Preferred Bank</string>
    <string name="choose_your_payment_method">Choose your Payment Method</string>
    <string name="usd_80_522">USD 80,522</string>
    <string name="select_bank_and_paynow">\"Select your bank and click Pay Now \"</string>
    <string name="one_room_warning">You must have one room</string>
    <string name="select_property">Select property</string>
    <string name="select_destination">Select Destination</string>
    <string name="no_internet">No Internet</string>
    <string name="deselect_all">Deselect all</string>
    <string name="meal">Meal</string>
    <string name="facilities_amenities"><![CDATA[Facilities & Amenities]]></string>
    <string name="neighbourhood">Neighbourhood</string>
    <string name="price_range">Price Range</string>
    <string name="available_hotels_0">0 Available Hotels</string>
    <string name="room_amenities">Room Amenities</string>
    <string name="any">Any</string>
    <string name="guests_information">Guests Information</string>>
    <string name="guest_s_room_s">Guest(s) &amp; Room(s)</string>>
</resources>